# django-regex-redirects

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  README.md  README.rst  manage.py  pyproject.toml  setup.py  testsettings.py  tox.ini
.github/workflows/: ci.yml  code-quality.yml
django_regex_redirects.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
regex_redirects/: actions.py  admin.py  apps.py  middleware.py  models.py  tests.py
regex_redirects/migrations/: 0001_initial.py  0002_auto_20151217_1938.py  0003_auto_20170126_1823.py  0004_auto_20170512_1349.py  0005_auto_20210425_1321.py
testapp/: settings.py
