[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-regex-redirects"
version = "0.7.0"
description = "Django redirects, with regular expressions"
authors = [
    {name = "Alex de Landgraaf", email = "alex@maykinmedia.nl"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Django", "regex"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "django>=3.2",
]

[project.urls]
Homepage = "https://github.com/maykinmedia/django-regex-redirects"
"Bug Tracker" = "https://github.com/maykinmedia/django-regex-redirects/issues"
"Source Code" = "https://github.com/maykinmedia/django-regex-redirects"

[project.optional-dependencies]
tests = [
    "tox",
    "isort",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
include = ["regex_redirects*"]
namespaces = false

[tool.isort]
profile = "black"
combine_as_imports = true
known_django = "django"
known_first_party="regex_redirects"
sections=["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["env", ".tox", ".history"]

[tool.coverage.run]
branch = true
source = [
    "regex_redirects"
]
omit = [
    "regex_redirects/migrations/*",
]

[tool.coverage.report]
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pass",
]
omit = [
    "regex_redirects/migrations/*",
]

[tool.coverage.html]
directory = "cover"
